<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--below line is to create preference category-->
    <PreferenceCategory android:title="General">

        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="Remind me to come back"
            android:entries="@array/pref_remind_me_to_come_back_later"
            android:entryValues="@array/pref_duration"
            android:key="@string/key_upload_quality"
            android:summary="Remind me to come back"
            android:title="Remind me to come back" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/remind_me_for_the_check_time"
            android:title="@string/remind_for_the_check_time" />


        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/limit_data_usage"
            android:summary="@string/stream_video"
            android:title="@string/limit_mobile_usage" />

        <RingtonePreference
            android:defaultValue="1"
            android:dialogTitle="Ringtone Selection"
            android:key="ringtone"
            android:summary="Select your preferred Ringtone"
            android:title="Ringtone" />

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/uploads"
            android:entries="@array/pref_uploads"
            android:entryValues="@array/pref_duration"
            android:key="@string/pref_uploads"
            android:summary="@string/specify_network_prefs"
            android:title="Uploads" />

        <CheckBoxPreference
            android:dialogTitle="Application Updates"
            android:key="updates"
            android:summary="This option if selected will allow the application to check for latest versions."
            android:title="Application Updates"
            />


        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/prefs_restricted_mode"
            android:summary="@string/restricated_mode"
            android:title="@string/restricated_mode_description" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/prefs_enable_stats"
            android:title="@string/enable_stats" />

    </PreferenceCategory>
</PreferenceScreen>